WIP: Add UI logic

--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
   <script src="js/scripts.js"></script>
 </head>
 <body>
+  <form>
+    <label for="input">Enter number:</label>
+    <input id="input" type="text" name="input" ></input>
+    <button>Submit</button>
+  </form>
+  <div class="hidden">
+    <p id="output"></p>
+  </div>
 </body>
 </html>
