Add and complete fifth test for robogerify()

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <form>
-    <label for="input">Enter number:</label>
+    <label for="input">Enter a natural (i.e., counting) number:</label>
     <input id="input" type="text" name="input" ></input>
     <button>Submit</button>
   </form>
