Add option for user to reverse displayed list  order

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   </div>
   <form>
     <label for="input">Enter a natural (i.e., counting) number:</label>
-    <input id="input" type="text" name="input" ></input>
+    <input id="input" type="text" name="input" ></input><br>
+    <label>
+      <input type="radio" name="order" value="ascending" checked>Ascending</input>
+    </label>
+    <label>
+      <input type="radio" name="order" value="descending">Descending</input>
+    </label><br>
     <div class="button-container">
       <button class="btn btn-primary m-3">Submit</button>
     </div>
