Add & complete test for user to input name and see in 'Won't you be my neighbor, ____?'

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </div>
   </div>
   <form>
-    <label for="input">Enter a natural (i.e., counting) number:</label>
-    <input id="input" type="text" name="input" ></input><br>
+    <label for="field1Input">Enter a natural (i.e., counting) number:</label>
+    <input id="field1Input" type="text" name="field1Input"></input><br>
+    <label for="field2Input">Enter your name (optional):</label>
+    <input id="field2Input" type="text" name="field2Input"></input><br>
     <label>
       <input type="radio" name="order" value="ascending" checked>Ascending</input>
     </label>
