Add random number generating button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <button class="btn btn-primary m-3">Submit</button>
     </div>
   </form>
-  <p></p>
+  <p><button id="randButton" type="button" class="btn btn-primary m-2">Click here</button>to enter a random number into the form above.</p>
+  <p id="outputParagraph"></p>
 </body>
 </html>
