Remove all '</input>' tags from index.html

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   </div>
   <form>
     <label for="field1Input">Enter a natural (i.e., counting) number:</label>
-    <input id="field1Input" type="text" name="field1Input"></input><br>
+    <input id="field1Input" type="text" name="field1Input"><br>
     <label for="field2Input">Enter your name (optional):</label>
-    <input id="field2Input" type="text" name="field2Input"></input><br>
+    <input id="field2Input" type="text" name="field2Input"><br>
     <label>
-      <input type="radio" name="order" value="ascending" checked>Ascending</input>
+      <input type="radio" name="order" value="ascending" checked>Ascending
     </label>
     <label>
-      <input type="radio" name="order" value="descending">Descending</input>
+      <input type="radio" name="order" value="descending">Descending
     </label><br>
     <div class="button-container">
       <button class="btn btn-primary m-3">Submit</button>
